Frontend: Fixed overlay bug on small resolution.

--- a/frontend/src/app/theme/components/sidebar/sidebar.component.scss
+++ b/frontend/src/app/theme/components/sidebar/sidebar.component.scss
@@ -5,7 +5,7 @@
   width: 30%;
   box-shadow: 0 8px 20px 0 rgba(40, 37, 89, 0.6);
   position: fixed;
-  z-index: 1;
+  z-index: -999;
   top: 0;
   right: -30%;
   background-color: $infinimesh-purple;
@@ -19,4 +19,5 @@
 .sidebar.open {
   opacity: 1;
   right: 0;
+  z-index: 999;
 }
